--- a/package.json
+++ b/package.json
@@ -25,5 +25,17 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sergey-Rimsha/Game_of_Thrones_React_DB.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Sergey-Rimsha/Game_of_Thrones_React_DB/issues"
+  },
+  "homepage": "https://github.com/Sergey-Rimsha/Game_of_Thrones_React_DB#readme",
+  "description": ""
 }
